# agemda

./: Cargo.toml  README.md  flake.nix
agemda-core/: Cargo.toml
agemda-core/src/: lib.rs
agemda-io/: Cargo.toml
agemda-io/src/: convert.rs  fragment.rs  lib.rs  link.rs  load.rs  parse.rs
agemda-tui/: Cargo.toml
agemda-tui/src/: cli.rs  lib.rs  main.rs
agemda-tui/src/widgets/: calendar.rs
ratatui-lincal/: Cargo.toml
ratatui-lincal/src/: calendar.rs  data.rs  lib.rs  row.rs  utils.rs
src/: cache.rs  lib.rs  load.rs  main.rs  store.rs  task.rs
src/models/: mod.rs
src/models/agmd/: mod.rs  parse.rs
src/models/fragment/: convert.rs  mod.rs  parse.rs
src/models/todo/: mod.rs  parse.rs
src/task/: fragment.rs  parse.rs
src/widgets/: calendar.rs
