[package]
name = "agemda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bpaf = { version = "0.9.18", features = ["batteries"] }
chrono = { version = "0.4.39", features = ["serde"] }
colored = "3.0.0"
dirs = "6.0.0"
fjall = "2.6.5"
ignore = "0.4.23"
nom = "8.0.0"
osc8 = "0.1.0"
pathdiff = "0.2.3"
postcard = { version = "1.1.1", features = ["alloc"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
url = "2.5.4"
uuid = { version = "1.14.0", features = ["v4"] }

