[package]
name = "agemda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bpaf = { version = "0.9.18", features = ["batteries"] }
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
fjall = "2.6.5"
ignore = "0.4.23"
nom = "8.0.0"
open = "5.3.2"
ouroboros = "0.18.5"
pathdiff = "0.2.3"
postcard = { version = "1.1.1", features = ["alloc"] }
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.14.0", features = ["v4"] }

