[package]
name = "agemda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
ignore = "0.4.23"
nom = "8.0.0"
open = "5.3.2"
ouroboros = "0.18.5"
pathdiff = "0.2.3"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
unicode-width = "0.2.0"

